<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_dark"
    android:textAlignment="center"
    tools:context=".activities.login.LoginActivity">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/logo_img"
                android:layout_width="256dp"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo_white" />

            <TextView
                android:id="@+id/login_prompt"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/login_text"
                android:textAlignment="center"
                android:textColor="@color/secondary_light"
                android:textSize="@dimen/text_size_extra_large"
                app:layout_constraintTop_toBottomOf="@+id/logo_img" />

            <LinearLayout
                android:id="@+id/login_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:padding="5dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo_img">


                <TextView
                    android:id="@+id/error_msg"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:paddingTop="5dp"
                    android:text="@string/default_error_text"
                    android:textAlignment="center"
                    android:textColor="@color/error_red"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/login_as_prompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/login_as_text"
                    android:textColor="@color/secondary_light" />

                <Spinner
                    android:id="@+id/select_user_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_margin="5dp"
                    android:background="?colorOnSecondary"
                    android:entries="@array/user_types" />

                <EditText
                    android:id="@+id/username_input"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_margin="5dp"
                    android:background="?colorOnSecondary"
                    android:ems="10"
                    android:hint="@string/username_hint"
                    android:inputType="text"
                    android:padding="5dp"
                    android:textColor="?android:textColorPrimary" />

                <EditText
                    android:id="@+id/password_input"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_margin="5dp"
                    android:background="?colorOnSecondary"
                    android:ems="10"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:textColor="?android:textColorPrimary" />

                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="69dp"
                    android:layout_margin="5dp"
                    android:backgroundTint="?colorOnSecondary"
                    android:onClick="handleLogin"
                    android:text="@string/login_text"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="20sp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>



    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>